# batteries-forking-included

./: .coveragerc  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  conda-environment.yml  liccheck.ini  post-bootstrap.sh  pyproject.toml  pytest-shell-script-test-harness  run.sh  shell-test-module.sh  shell-test-toplevel.sh  shell-test.sh  tox.ini  update-all.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml
examples/: batteries-forking-included
examples/conda-and-pip/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  conda-bootstrapper-update.sh  pip-requirements-base.txt  pip-requirements-dev.txt  pip-requirements.txt  post-bootstrap.sh  run.sh
examples/conda-and-pip/src/conda_and_pip/: __init__.py  __main__.py
examples/conda-and-poetry/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  conda-environment.yml  post-bootstrap.sh  run.sh
examples/conda-and-poetry/src/conda_and_poetry/: __main__.py
examples/conda-only/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  post-bootstrap.sh  run.sh
examples/conda-only-no-py/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  conda-environment.yml  post-bootstrap.sh  run.sh
examples/conda-only/src/conda_only/: __impl.py  __main__.py
src/: batteries-forking-included.py  batteries-forking-included.sh  conda-bootstrapper.sh  constants.sh
src/batteries_forking_included/: __impl.py  __init__.py  __main__.py  batteries-forking-included.py  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  post-bootstrap.sh  run.sh
src/batteries_forking_included/template/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  post-bootstrap.sh  run.sh
src/template/: activate.sh  batteries-forking-included.sh  bfi-base.sh  bfi-update.sh  bootstrap.sh  conda-bootstrapper-update.sh  post-bootstrap.sh  run.sh
tests/: PytestShellTestHarness.py  PytestShellTestHarnessFixture.py  __init__.py  conftest.py  test_batteries-forking-included.py  test_project_matches_template.py
tests/_PytestShellTestHarness/: __init__.py  example_shell_script.sh  test_PytestShellTestHarness.py  test_PytestShellTestHarness.sh
tests/examples/: __init__.py
tests/examples/conda_and_pip/: __init__.py  test_project_matches_template.py
tests/examples/conda_and_poetry/: __init__.py  test_project_matches_template.py
tests/examples/conda_only/: __init__.py  test_project_matches_template.py
tests/examples/conda_only_no_py/: __init__.py
tests/src/: __init__.py  conftest.py  helper_functions.py
tests/src/batteries_forking_included/: __init__.py  test___impl.py  test___main__.py  test_batteries_forking_included.py  test_project_matches_template.py
tests/src/batteries_forking_included/activate_sh/: __init__.py  test_shell.py  test_shell.sh
tests/src/batteries_forking_included/batteries_forking_included_sh/: __init__.py
tests/src/batteries_forking_included/bfi_base_sh/: __init__.py  test_format_log_message.py  test_format_log_message.sh  test_get_ansi_code.py  test_get_ansi_code.sh  test_get_ansi_code_.py  test_get_ansi_code_.sh  test_log_.py  test_log_.sh  test_report_.py  test_report_.sh  test_return_code_is_.py  test_return_code_is_.sh  test_shell.py  test_shell.sh  test_teetty_G.py  test_teetty_G.sh
tests/src/batteries_forking_included/bfi_update_sh/: __init__.py  test_shell.py  test_shell.sh
tests/src/batteries_forking_included/bootstrap_sh/: __init__.py  test_shell.py  test_shell.sh
tests/src/batteries_forking_included/post_bootstrap_sh/: __init__.py  test_shell.py  test_shell.sh
tests/src/batteries_forking_included/run_sh/: __init__.py  test_shell.py  test_shell.sh
